[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/boingy_ding.wav" type="AudioStream" id=2]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="VisualElements" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="VisualElements"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )

[node name="Buttons" type="VBoxContainer" parent="VisualElements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -22.0
margin_right = 45.5
margin_bottom = 22.0

[node name="Resume" type="Button" parent="VisualElements/Buttons"]
margin_right = 91.0
margin_bottom = 20.0
text = "Resume"

[node name="Quit" type="Button" parent="VisualElements/Buttons"]
margin_top = 24.0
margin_right = 91.0
margin_bottom = 44.0
text = "Quit To Title"

[node name="MenuOpened" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="VisualElements/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VisualElements/Buttons/Resume" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VisualElements/Buttons/Quit" to="." method="_on_Quit_pressed"]
